--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.5.3</version>
+           <configuration>
+        <suiteXmlFiles>
+            <!-- path relative to project root -->
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+            <!-- or src/test/resources/testng.xml -->
+        </suiteXmlFiles>
+    </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
